RESOLVED FIXED113419
RenderBox::backgroundIsKnownToBeOpaqueInRect may be wrong for theme-painted elements
https://bugs.webkit.org/show_bug.cgi?id=113419
Summary RenderBox::backgroundIsKnownToBeOpaqueInRect may be wrong for theme-painted e...
Alok Priyadarshi
Reported 2013-03-27 10:16:11 PDT
It is not known if theme paints the assigned background or not, in which case we should not mark such elements as opaque.
Attachments
Patch (4.50 KB, patch)
2013-03-27 14:52 PDT, Alok Priyadarshi
simon.fraser: review+
webkit.review.bot: commit-queue-
Archive of layout-test-results from gce-cr-linux-02 for chromium-linux-x86_64 (1.54 MB, application/zip)
2013-03-27 18:14 PDT, WebKit Review Bot
no flags
Archive of layout-test-results from gce-cr-linux-08 for chromium-linux-x86_64 (782.00 KB, application/zip)
2013-03-27 19:13 PDT, WebKit Review Bot
no flags
Alok Priyadarshi
Comment 1 2013-03-27 14:52:46 PDT
Simon Fraser (smfr)
Comment 2 2013-03-27 14:59:00 PDT
Comment on attachment 195399 [details] Patch Did this break a real site? If so, please say so in the change log.
Alok Priyadarshi
Comment 3 2013-03-27 15:04:52 PDT
I am not aware of any real site being broken. It breaks the example attached in the chromium bug: crbug.com/223490
WebKit Review Bot
Comment 4 2013-03-27 18:13:57 PDT
Comment on attachment 195399 [details] Patch Attachment 195399 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17324207 New failing tests: compositing/contents-opaque/control-layer.html platform/chromium/virtual/softwarecompositing/contents-opaque/control-layer.html
WebKit Review Bot
Comment 5 2013-03-27 18:14:01 PDT
Created attachment 195454 [details] Archive of layout-test-results from gce-cr-linux-02 for chromium-linux-x86_64 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-02 Port: chromium-linux-x86_64 Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
WebKit Review Bot
Comment 6 2013-03-27 19:13:39 PDT
Comment on attachment 195399 [details] Patch Attachment 195399 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17286551 New failing tests: compositing/contents-opaque/control-layer.html platform/chromium/virtual/softwarecompositing/contents-opaque/control-layer.html
WebKit Review Bot
Comment 7 2013-03-27 19:13:43 PDT
Created attachment 195461 [details] Archive of layout-test-results from gce-cr-linux-08 for chromium-linux-x86_64 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-08 Port: chromium-linux-x86_64 Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
Alok Priyadarshi
Comment 8 2013-03-28 10:01:22 PDT
Note You need to log in before you can comment on or make changes to this bug.