RenderBox::backgroundIsKnownToBeOpaqueInRect may be wrong for theme-painted elements https://bugs.webkit.org/show_bug.cgi?id=113419

Reviewed by Simon Fraser.

Source/WebCore:

Do not consider control elements as opaque. They are typically theme painted, and we cannot assume opaqueness on the behalf of theme. It can be improved by asking the theme if it paints opaque.

Test: compositing/contents-opaque/control-layer.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::backgroundIsKnownToBeOpaqueInRect):

LayoutTests:

* compositing/contents-opaque/control-layer-expected.txt: Added.
* compositing/contents-opaque/control-layer.html: Added.
* platform/chromium/compositing/contents-opaque/control-layer-expected.txt: Added.

Canonical link: https://commits.webkit.org/131854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147127 268f45cc-cd09-0410-ab3c-d52691b4dbfc